[tool.poetry]
name = "weni-protobuffers"
version = "1.0.0"
description = "Protocol Buffers for Weni Platform"
authors = ["João Carlos <jcbalmeida@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
