[tool.poetry]
name = "weni-protobuffers"
version = "1.1.0"
description = "Protocol Buffers for Weni Platform"
authors = ["João Carlos <jcbalmeida@gmail.com>"]
packages = [
    { include = "weni" }
]

[tool.poetry.dependencies]
python = "^3.6"
grpcio = "^1.39.0"
protobuf = "^3.17.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
grpcio-tools = "^1.39.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
